--- a/pages/blog.html
+++ b/pages/blog.html
@@ -410,7 +410,7 @@
         <div class="flex flex-col justify-between">
           <div>
             <a
-              href="/cargo_transportation.html"
+              href="cargo_transportation.html"
               class="text-[#ffffff99] hover:text-white transition-colors"
             >
               <p
@@ -422,42 +422,42 @@
             <ul>
               <li class="text-white space3 font-medium mb-3">
                 <a
-                  href="/cargo_transportation.html"
+                  href="cargo_transportation.html"
                   class="text-white hover:text-[#C83A36] transition-colors"
                   >Грузоперевозки фурами</a
                 >
               </li>
               <li class="text-white space3 font-medium mb-3">
                 <a
-                  href="/cargo_transportation.html"
+                  href="cargo_transportation.html"
                   class="text-white hover:text-[#C83A36] transition-colors"
                   >Грузоперевозки 1,5 тонны</a
                 >
               </li>
               <li class="text-white space3 font-medium mb-3">
                 <a
-                  href="/cargo_transportation.html"
+                  href="cargo_transportation.html"
                   class="text-white hover:text-[#C83A36] transition-colors"
                   >Грузоперевозки 3 тонны</a
                 >
               </li>
               <li class="text-white space3 font-medium mb-3">
                 <a
-                  href="/cargo_transportation.html"
+                  href="cargo_transportation.html"
                   class="text-white hover:text-[#C83A36] transition-colors"
                   >Грузоперевозки 5 тонны</a
                 >
               </li>
               <li class="text-white space3 font-medium mb-3">
                 <a
-                  href="/cargo_transportation.html"
+                  href="cargo_transportation.html"
                   class="text-white hover:text-[#C83A36] transition-colors"
                   >Грузоперевозки 10 тонны</a
                 >
               </li>
               <li class="text-white space3 font-medium mb-3">
                 <a
-                  href="/cargo_transportation.html"
+                  href="cargo_transportation.html"
                   class="text-white hover:text-[#C83A36] transition-colors"
                   >Грузоперевозки 20 тонны</a
                 >
@@ -472,7 +472,7 @@
         </div>
         <div>
           <a
-            href="/road_transportation.html"
+            href="road_transportation.html"
             class="text-[#ffffff99] hover:text-white transition-colors"
           >
             <p
@@ -484,21 +484,21 @@
           <ul>
             <li class="text-white space3 font-medium mb-3">
               <a
-                href="/road_transportation.html"
+                href="road_transportation.html"
                 class="text-white hover:text-[#C83A36] transition-colors"
                 >Международные перевозки</a
               >
             </li>
             <li class="text-white space3 font-medium mb-3">
               <a
-                href="/road_transportation.html"
+                href="road_transportation.html"
                 class="text-white hover:text-[#C83A36] transition-colors"
                 >Междугородние перевозки</a
               >
             </li>
             <li class="text-white space3 font-medium mb-3">
               <a
-                href="/road_transportation.html"
+                href="road_transportation.html"
                 class="text-white hover:text-[#C83A36] transition-colors"
                 >Перевозка негабаритных грузов</a
               >
@@ -519,42 +519,42 @@
           <ul>
             <li class="text-white space3 font-medium mb-3">
               <a
-                href="/pricelist.html"
+                href="pricelist.html"
                 class="text-white hover:text-[#C83A36] transition-colors"
                 >Прайс-лист</a
               >
             </li>
             <li class="text-white space3 font-medium mb-3">
               <a
-                href="/news.html"
+                href="news.html"
                 class="text-white hover:text-[#C83A36] transition-colors"
                 >Новости</a
               >
             </li>
             <li class="text-white space3 font-medium mb-3">
               <a
-                href="/blog.html"
+                href="blog.html"
                 class="text-white hover:text-[#C83A36] transition-colors"
                 >Статьи</a
               >
             </li>
             <li class="text-white space3 font-medium mb-3">
               <a
-                href="/documents.html"
+                href="documents.html"
                 class="text-white hover:text-[#C83A36] transition-colors"
                 >Документы</a
               >
             </li>
             <li class="text-white space3 font-medium mb-3">
               <a
-                href="/reviews.html"
+                href="comments.html"
                 class="text-white hover:text-[#C83A36] transition-colors"
                 >Отзывы</a
               >
             </li>
             <li class="text-white space3 font-medium mb-3">
               <a
-                href="/contacts.html"
+                href="contacts.html"
                 class="text-white hover:text-[#C83A36] transition-colors"
                 >Контакты</a
               >
@@ -564,7 +564,7 @@
         <div class="flex flex-col justify-between max-[1024px]:hidden">
           <div class="mb-20">
             <a
-              href="/contacts.html"
+              href="contacts.html"
               class="text-[#ffffff99] hover:text-white transition-colors"
             >
               <p
@@ -608,14 +608,14 @@
               </li>
               <li class="text-white space3 font-medium mb-3">
                 <a
-                  href="/comments.html"
+                  href="comments.html"
                   class="text-white hover:text-[#C83A36] transition-colors"
                   >Отзывы</a
                 >
               </li>
               <li class="text-white space3 font-medium">
                 <a
-                  href="/contacts.html"
+                  href="contacts.html"
                   class="text-white hover:text-[#C83A36] transition-colors"
                   >Контакты</a
                 >
@@ -624,7 +624,7 @@
           </div>
           <p class="text-[#ffffff99] space3 max-[1440px]:hidden">
             <a
-              href="/privacy.html"
+              href="privacy.html"
               class="text-[#ffffff99] hover:text-white transition-colors"
               >Политика конфиденциальности</a
             >
@@ -633,7 +633,7 @@
       </div>
       <div class="hidden max-[1024px]:block">
         <a
-          href="/contacts.html"
+          href="contacts.html"
           class="text-[#ffffff99] hover:text-white transition-colors"
         >
           <p
