--- a/index.html
+++ b/index.html
@@ -1945,7 +1945,7 @@
             </li>
             <li class="text-white space3 font-medium mb-3">
               <a
-                href="/pages/reviews.html"
+                href="/pages/comments.html"
                 class="text-white hover:text-[#C83A36] transition-colors"
                 >Отзывы</a
               >
