--- a/pages/cargo_transportation.html
+++ b/pages/cargo_transportation.html
@@ -1902,42 +1902,42 @@
           <ul>
             <li class="text-white space3 font-medium mb-3">
               <a
-                href="/pricelist.html"
+                href="pricelist.html"
                 class="text-white hover:text-[#C83A36] transition-colors"
                 >Прайс-лист</a
               >
             </li>
             <li class="text-white space3 font-medium mb-3">
               <a
-                href="/news.html"
+                href="news.html"
                 class="text-white hover:text-[#C83A36] transition-colors"
                 >Новости</a
               >
             </li>
             <li class="text-white space3 font-medium mb-3">
               <a
-                href="/blog.html"
+                href="blog.html"
                 class="text-white hover:text-[#C83A36] transition-colors"
                 >Статьи</a
               >
             </li>
             <li class="text-white space3 font-medium mb-3">
               <a
-                href="/documents.html"
+                href="documents.html"
                 class="text-white hover:text-[#C83A36] transition-colors"
                 >Документы</a
               >
             </li>
             <li class="text-white space3 font-medium mb-3">
               <a
-                href="/comments.html"
+                href="comments.html"
                 class="text-white hover:text-[#C83A36] transition-colors"
                 >Отзывы</a
               >
             </li>
             <li class="text-white space3 font-medium mb-3">
               <a
-                href="/contacts.html"
+                href="contacts.html"
                 class="text-white hover:text-[#C83A36] transition-colors"
                 >Контакты</a
               >
@@ -1947,7 +1947,7 @@
         <div class="flex flex-col justify-between max-[1024px]:hidden">
           <div class="mb-20">
             <a
-              href="/contacts.html"
+              href="contacts.html"
               class="text-[#ffffff99] hover:text-white transition-colors"
             >
               <p
@@ -1995,14 +1995,14 @@
               </li>
               <li class="text-white space3 font-medium mb-3">
                 <a
-                  href="/reviews.html"
+                  href="reviews.html"
                   class="text-white hover:text-[#C83A36] transition-colors"
                   >Отзывы</a
                 >
               </li>
               <li class="text-white space3 font-medium">
                 <a
-                  href="/contacts.html"
+                  href="contacts.html"
                   class="text-white hover:text-[#C83A36] transition-colors"
                   >Контакты</a
                 >
@@ -2011,7 +2011,7 @@
           </div>
           <p class="text-[#ffffff99] space3 max-[1440px]:hidden">
             <a
-              href="/privacy.html"
+              href="privacy.html"
               class="text-[#ffffff99] hover:text-white transition-colors"
               >Политика конфиденциальности</a
             >
@@ -2020,7 +2020,7 @@
       </div>
       <div class="hidden max-[1024px]:block">
         <a
-          href="/contacts.html"
+          href="contacts.html"
           class="text-[#ffffff99] hover:text-white transition-colors"
         >
           <p
