--- a/pages/news.html
+++ b/pages/news.html
@@ -457,42 +457,42 @@
           <ul>
             <li class="text-white space3 font-medium mb-3">
               <a
-                href="/pricelist.html"
+                href="pricelist.html"
                 class="text-white hover:text-[#C83A36] transition-colors"
                 >Прайс-лист</a
               >
             </li>
             <li class="text-white space3 font-medium mb-3">
               <a
-                href="/news.html"
+                href="news.html"
                 class="text-white hover:text-[#C83A36] transition-colors"
                 >Новости</a
               >
             </li>
             <li class="text-white space3 font-medium mb-3">
               <a
-                href="/blog.html"
+                href="blog.html"
                 class="text-white hover:text-[#C83A36] transition-colors"
                 >Статьи</a
               >
             </li>
             <li class="text-white space3 font-medium mb-3">
               <a
-                href="/documents.html"
+                href="documents.html"
                 class="text-white hover:text-[#C83A36] transition-colors"
                 >Документы</a
               >
             </li>
             <li class="text-white space3 font-medium mb-3">
               <a
-                href="/comments.html"
+                href="comments.html"
                 class="text-white hover:text-[#C83A36] transition-colors"
                 >Отзывы</a
               >
             </li>
             <li class="text-white space3 font-medium mb-3">
               <a
-                href="/contacts.html"
+                href="contacts.html"
                 class="text-white hover:text-[#C83A36] transition-colors"
                 >Контакты</a
               >
@@ -502,7 +502,7 @@
         <div class="flex flex-col justify-between max-[1024px]:hidden">
           <div class="mb-20">
             <a
-              href="/contacts.html"
+              href="contacts.html"
               class="text-[#ffffff99] hover:text-white transition-colors"
             >
               <p
@@ -515,8 +515,12 @@
               <li
                 class="text-white space3 font-medium mb-3 max-w-108 max-[1440px]:max-w-60"
               >
-                ООО АТЭК «Грузовые линии» 630071, Новосибирск, ул. Станционная,
-                62/1, офис 416
+                <a
+                  href="https://yandex.uz/maps/65/novosibirsk/house/stantsionnaya_ulitsa_62_1/bEsYfgVmTU0DQFtufXV4dnpnZQ==/?ll=82.826483%2C54.997641&z=16"
+                  class="text-white hover:text-[#C83A36] transition-colors"
+                  >ООО АТЭК «Грузовые линии» 630071, Новосибирск, ул.
+                  Станционная, 62/1, офис 416</a
+                >
               </li>
               <li class="text-white space3 font-medium mb-3">
                 <a
@@ -546,14 +550,14 @@
               </li>
               <li class="text-white space3 font-medium mb-3">
                 <a
-                  href="/reviews.html"
+                  href="reviews.html"
                   class="text-white hover:text-[#C83A36] transition-colors"
                   >Отзывы</a
                 >
               </li>
               <li class="text-white space3 font-medium">
                 <a
-                  href="/contacts.html"
+                  href="contacts.html"
                   class="text-white hover:text-[#C83A36] transition-colors"
                   >Контакты</a
                 >
@@ -562,7 +566,7 @@
           </div>
           <p class="text-[#ffffff99] space3 max-[1440px]:hidden">
             <a
-              href="/privacy.html"
+              href="privacy.html"
               class="text-[#ffffff99] hover:text-white transition-colors"
               >Политика конфиденциальности</a
             >
@@ -571,7 +575,7 @@
       </div>
       <div class="hidden max-[1024px]:block">
         <a
-          href="/contacts.html"
+          href="contacts.html"
           class="text-[#ffffff99] hover:text-white transition-colors"
         >
           <p
@@ -584,12 +588,8 @@
           <li
             class="text-white space3 font-medium mb-3 max-w-108 max-[1440px]:max-w-60"
           >
-            <a
-              href="https://yandex.uz/maps/65/novosibirsk/house/stantsionnaya_ulitsa_62_1/bEsYfgVmTU0DQFtufXV4dnpnZQ==/?ll=82.826483%2C54.997641&z=16"
-              class="text-white hover:text-[#C83A36] transition-colors"
-              >ООО АТЭК «Грузовые линии» 630071, Новосибирск, ул. Станционная,
-              62/1, офис 416</a
-            >
+            ООО АТЭК «Грузовые линии» 630071, Новосибирск, ул. Станционная,
+            62/1, офис 416
           </li>
           <li class="text-white space3 font-medium mb-3">
             <a
@@ -603,7 +603,7 @@
               href="tel:+73832305677"
               class="text-white hover:text-[#C83A36] transition-colors"
               >230-56-77</a
-            >,
+            >
             <a
               href="tel:+73832300613"
               class="text-white hover:text-[#C83A36] transition-colors"
