--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
           </div>
           <div id="cars" class="flex mb-4 gap-4 overflow-auto">
             <div
-              class="p-4 rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
+              class="p-4 truck-card active rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
             >
               <img src="./assets/icons/formCar.svg" alt="car" class="mb-2.5" />
               <p
@@ -325,7 +325,7 @@
               </p>
             </div>
             <div
-              class="p-4 rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
+              class="p-4 truck-card rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
             >
               <img src="./assets/icons/formCar2.svg" alt="car" class="mb-2.5" />
               <p
@@ -335,7 +335,7 @@
               </p>
             </div>
             <div
-              class="p-4 rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
+              class="p-4 truck-card rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
             >
               <img src="./assets/icons/formCar3.svg" alt="car" class="mb-2.5" />
               <p
@@ -345,7 +345,7 @@
               </p>
             </div>
             <div
-              class="p-4 rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
+              class="p-4 truck-card rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
             >
               <img src="./assets/icons/formCar4.svg" alt="car" class="mb-2.5" />
               <p
@@ -355,7 +355,7 @@
               </p>
             </div>
             <div
-              class="p-4 rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30! bg-[#F2F5F7] flex flex-col items-center shrink-0"
+              class="p-4 truck-card rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30! bg-[#F2F5F7] flex flex-col items-center shrink-0"
             >
               <img src="./assets/icons/formCar5.svg" alt="car" class="mb-2.5" />
               <p
@@ -486,7 +486,7 @@
         </div>
         <div id="cars-mobile" class="flex mb-2 gap-2 overflow-auto">
           <div
-            class="p-4 rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
+            class="p-4 truck-card active rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
           >
             <img src="./assets/icons/formCar.svg" alt="car" class="mb-1" />
             <p class="max-w-21 text-lg text-center text-[#3A3A3A] font-medium">
@@ -494,7 +494,7 @@
             </p>
           </div>
           <div
-            class="p-4 rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
+            class="p-4 truck-card rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
           >
             <img src="./assets/icons/formCar2.svg" alt="car" class="mb-1" />
             <p class="max-w-21 text-lg text-center text-[#3A3A3A] font-medium">
@@ -502,7 +502,7 @@
             </p>
           </div>
           <div
-            class="p-4 rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
+            class="p-4 truck-card rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
           >
             <img src="./assets/icons/formCar3.svg" alt="car" class="mb-1" />
             <p class="max-w-21 text-lg text-center text-[#3A3A3A] font-medium">
@@ -510,7 +510,7 @@
             </p>
           </div>
           <div
-            class="p-4 rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
+            class="p-4 truck-card rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
           >
             <img src="./assets/icons/formCar4.svg" alt="car" class="mb-1" />
             <p class="max-w-21 text-lg text-center text-[#3A3A3A] font-medium">
@@ -518,7 +518,7 @@
             </p>
           </div>
           <div
-            class="p-4 rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30! bg-[#F2F5F7] flex flex-col items-center shrink-0"
+            class="p-4 truck-card rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30! bg-[#F2F5F7] flex flex-col items-center shrink-0"
           >
             <img src="./assets/icons/formCar5.svg" alt="car" class="mb-1" />
             <p class="max-w-21 text-lg text-center text-[#3A3A3A] font-medium">
