--- a/pages/cargo_transportation.html
+++ b/pages/cargo_transportation.html
@@ -311,7 +311,7 @@
           </div>
           <div id="cars" class="flex mb-4 gap-4 overflow-auto">
             <div
-              class="p-4 rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
+              class="p-4 truck-card-form active rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
             >
               <img src="../assets/icons/formCar.svg" alt="car" class="mb-2.5" />
               <p
@@ -321,7 +321,7 @@
               </p>
             </div>
             <div
-              class="p-4 rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
+              class="p-4 truck-card-form rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
             >
               <img
                 src="../assets/icons/formCar2.svg"
@@ -335,7 +335,7 @@
               </p>
             </div>
             <div
-              class="p-4 rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
+              class="p-4 truck-card-form rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
             >
               <img
                 src="../assets/icons/formCar3.svg"
@@ -349,7 +349,7 @@
               </p>
             </div>
             <div
-              class="p-4 rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
+              class="p-4 truck-card-form rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
             >
               <img
                 src="../assets/icons/formCar4.svg"
@@ -363,7 +363,7 @@
               </p>
             </div>
             <div
-              class="p-4 rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30! bg-[#F2F5F7] flex flex-col items-center shrink-0"
+              class="p-4 truck-card-form rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30! bg-[#F2F5F7] flex flex-col items-center shrink-0"
             >
               <img
                 src="../assets/icons/formCar5.svg"
@@ -498,7 +498,7 @@
         </div>
         <div id="cars-mobile" class="flex mb-2 gap-2 overflow-auto">
           <div
-            class="p-4 rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
+            class="p-4 truck-card-form active rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
           >
             <img src="../assets/icons/formCar.svg" alt="car" class="mb-1" />
             <p class="max-w-21 text-lg text-center text-[#3A3A3A] font-medium">
@@ -506,7 +506,7 @@
             </p>
           </div>
           <div
-            class="p-4 rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
+            class="p-4 truck-card-form rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
           >
             <img src="../assets/icons/formCar2.svg" alt="car" class="mb-1" />
             <p class="max-w-21 text-lg text-center text-[#3A3A3A] font-medium">
@@ -514,7 +514,7 @@
             </p>
           </div>
           <div
-            class="p-4 rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
+            class="p-4 truck-card-form rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
           >
             <img src="../assets/icons/formCar3.svg" alt="car" class="mb-1" />
             <p class="max-w-21 text-lg text-center text-[#3A3A3A] font-medium">
@@ -522,7 +522,7 @@
             </p>
           </div>
           <div
-            class="p-4 rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
+            class="p-4 truck-card-form rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
           >
             <img src="../assets/icons/formCar4.svg" alt="car" class="mb-1" />
             <p class="max-w-21 text-lg text-center text-[#3A3A3A] font-medium">
@@ -530,7 +530,7 @@
             </p>
           </div>
           <div
-            class="p-4 rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30! bg-[#F2F5F7] flex flex-col items-center shrink-0"
+            class="p-4 truck-card-form rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30! bg-[#F2F5F7] flex flex-col items-center shrink-0"
           >
             <img src="../assets/icons/formCar5.svg" alt="car" class="mb-1" />
             <p class="max-w-21 text-lg text-center text-[#3A3A3A] font-medium">
