--- a/pages/cargo_transportation.html
+++ b/pages/cargo_transportation.html
@@ -241,7 +241,7 @@
       </div>
       <div class="swiper-pagination"></div>
       <div
-        class="flex justify-between max-[1024px]:flex-col max-[1024px]:gap-10 max-[1024px]:items-center absolute w-full top-0 z-10 px-15 pt-22.5 max-[1440px]:pt-32.5 max-[768px]:px-5 max-[768px]:pt-30"
+        class="flex justify-between gap-10 max-[1024px]:flex-col max-[1024px]:gap-10 max-[1024px]:items-center absolute w-full top-0 z-10 px-10 pt-22.5 max-[1440px]:pt-32.5 max-[768px]:px-4 max-[768px]:pt-30"
       >
         <div
           class="max-w-[793px] max-[1440px]:max-w-[431px] max-[1024px]:max-w-full"
@@ -269,7 +269,7 @@
           </button>
         </div>
         <div
-          class="w-[722px] max-[1920px]:max-h-[87vh] max-[1440px]:max-h-full overflow-auto bg-white p-8 rounded-3xl max-[1440px]:w-[504px] max-[1024px]:w-[728px] max-[1024px]:p-6 max-[768px]:hidden"
+          class="w-[722px] shrink-0 max-[1920px]:max-h-[87vh] max-[1440px]:max-h-full overflow-auto bg-white p-8 rounded-3xl max-[1440px]:w-[504px] max-[1024px]:w-[728px] max-[1024px]:p-6 max-[768px]:hidden"
         >
           <h2
             class="text-[#3A3A3A] font-medium leading-[100%] space3 text-[2rem] mb-6"
