--- a/pages/comments.html
+++ b/pages/comments.html
@@ -376,7 +376,7 @@
         class="mb-40 max-[1440px]:mb-20 max-[1024px]:mb-16 px-15 max-[1440px]:px-10 max-[1024px]:px-5"
       >
         <div
-          class="items-center flex justify-between mb-14 max-[1440px]:mb-10 max-[768px]:mb-8"
+          class="items-center flex justify-between mb-14 max-[1440px]:mb-10 max-[768px]:mb-8 max-[768px]:flex-col max-[768px]:gap-6 max-[768px]:items-start"
         >
           <h2 class="title">Благодарственные письма</h2>
           <div class="flex items-center gap-6">
