--- a/index.html
+++ b/index.html
@@ -1846,7 +1846,7 @@
               Мы открыли новое направление для доставки в малые населённые
               пункты. Теперь ваши грузы доберутся ещё быстрее.
             </p>
-            <p class="text-[#3A3A3A] space3">28 июня 2025</p>
+            <p class="text-[#3A3A3A99] space3">28 июня 2025</p>
           </a>
           <a
             class="news-card max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
@@ -1861,7 +1861,7 @@
               Благодаря оптимизации логистики мы сократили среднее время
               доставки по городу до 3 часов.
             </p>
-            <p class="text-[#3A3A3A] space3">19 июня 2025</p>
+            <p class="text-[#3A3A3A99] space3">19 июня 2025</p>
           </a>
 
           <a
@@ -1878,7 +1878,7 @@
               Ввели усиленные правила упаковки грузов для повышения сохранности
               при перевозке.
             </p>
-            <p class="text-[#3A3A3A] space3">5 июня 2025</p>
+            <p class="text-[#3A3A3A99] space3">5 июня 2025</p>
           </a>
 
           <a
@@ -1895,7 +1895,7 @@
               Подписывайтесь на наш Telegram-канал, чтобы первыми узнавать об
               акциях, изменениях и новостях компании.
             </p>
-            <p class="text-[#3A3A3A] space3">1 июля 2025</p>
+            <p class="text-[#3A3A3A99] space3">1 июля 2025</p>
           </a>
         </div>
 
