--- a/pages/cargo_transportation.html
+++ b/pages/cargo_transportation.html
@@ -1760,7 +1760,7 @@
               Мы открыли новое направление для доставки в малые населённые
               пункты. Теперь ваши грузы доберутся ещё быстрее.
             </p>
-            <p class="text-[#3A3A3A] space3">28 июня 2025</p>
+            <p class="text-[#3A3A3A99] space3">28 июня 2025</p>
           </a>
           <a
             href="/blog.html"
@@ -1780,7 +1780,7 @@
               Благодаря оптимизации логистики мы сократили среднее время
               доставки по городу до 3 часов.
             </p>
-            <p class="text-[#3A3A3A] space3">19 июня 2025</p>
+            <p class="text-[#3A3A3A99] space3">19 июня 2025</p>
           </a>
           <a
             href="/blog.html"
@@ -1800,7 +1800,7 @@
               Ввели усиленные правила упаковки грузов для повышения сохранности
               при перевозке.
             </p>
-            <p class="text-[#3A3A3A] space3">5 июня 2025</p>
+            <p class="text-[#3A3A3A99] space3">5 июня 2025</p>
           </a>
           <a
             href="/blog.html"
@@ -1820,7 +1820,7 @@
               Подписывайтесь на наш Telegram-канал, чтобы первыми узнавать об
               акциях, изменениях и новостях компании.
             </p>
-            <p class="text-[#3A3A3A] space3">1 июля 2025</p>
+            <p class="text-[#3A3A3A99] space3">1 июля 2025</p>
           </a>
         </div>
 
