--- a/pages/news.html
+++ b/pages/news.html
@@ -314,7 +314,7 @@
             Мы открыли новое направление для доставки в малые населённые пункты.
             Теперь ваши грузы доберутся ещё быстрее.
           </p>
-          <p class="text-[#3A3A3A] space3">28 июня 2025</p>
+          <p class="text-[#3A3A3A99] space3">28 июня 2025</p>
         </a>
         <a
           href="/blog.html"
@@ -332,7 +332,7 @@
             Благодаря оптимизации логистики мы сократили среднее время доставки
             по городу до 3 часов.
           </p>
-          <p class="text-[#3A3A3A] space3">19 июня 2025</p>
+          <p class="text-[#3A3A3A99] space3">19 июня 2025</p>
         </a>
         <a
           href="/blog.html"
@@ -350,7 +350,7 @@
             Ввели усиленные правила упаковки грузов для повышения сохранности
             при перевозке.
           </p>
-          <p class="text-[#3A3A3A] space3">5 июня 2025</p>
+          <p class="text-[#3A3A3A99] space3">5 июня 2025</p>
         </a>
         <a
           href="/blog.html"
@@ -368,7 +368,7 @@
             Подписывайтесь на наш Telegram-канал, чтобы первыми узнавать об
             акциях, изменениях и новостях компании.
           </p>
-          <p class="text-[#3A3A3A] space3">1 июля 2025</p>
+          <p class="text-[#3A3A3A99] space3">1 июля 2025</p>
         </a>
         <a
           href="/blog.html"
@@ -382,7 +382,7 @@
             Мы открыли новое направление для доставки в малые населённые пункты.
             Теперь ваши грузы доберутся ещё быстрее.
           </p>
-          <p class="text-[#3A3A3A] space3">28 июня 2025</p>
+          <p class="text-[#3A3A3A99] space3">28 июня 2025</p>
         </a>
         <a
           href="/blog.html"
@@ -400,7 +400,7 @@
             Благодаря оптимизации логистики мы сократили среднее время доставки
             по городу до 3 часов.
           </p>
-          <p class="text-[#3A3A3A] space3">19 июня 2025</p>
+          <p class="text-[#3A3A3A99] space3">19 июня 2025</p>
         </a>
         <a
           href="/blog.html"
@@ -418,7 +418,7 @@
             Ввели усиленные правила упаковки грузов для повышения сохранности
             при перевозке.
           </p>
-          <p class="text-[#3A3A3A] space3">5 июня 2025</p>
+          <p class="text-[#3A3A3A99] space3">5 июня 2025</p>
         </a>
         <a
           href="/blog.html"
@@ -436,7 +436,7 @@
             Подписывайтесь на наш Telegram-канал, чтобы первыми узнавать об
             акциях, изменениях и новостях компании.
           </p>
-          <p class="text-[#3A3A3A] space3">1 июля 2025</p>
+          <p class="text-[#3A3A3A99] space3">1 июля 2025</p>
         </a>
       </div>
     </main>
