--- a/pages/blog.html
+++ b/pages/blog.html
@@ -28,13 +28,13 @@
         </a>
         <div class="flex gap-6 max-[1440px]:hidden">
           <div class="dropdown">
-            <button
+            <a
+              href="./cargo_transportation.html"
               class="flex items-center gap-1 dropdown-trigger"
-              type="button"
             >
               <p class="text-white font-medium text-xl">Грузоперевозки</p>
               <img src="../assets/icons/chevron.svg" alt="chevron" />
-            </button>
+            </a>
             <div class="dropdown-menu">
               <a
                 href="./cargo_transportation.html"
@@ -69,13 +69,13 @@
             </div>
           </div>
           <div class="dropdown">
-            <button
+            <a
+              href="./road_transportation.html"
               class="flex items-center gap-1 dropdown-trigger"
-              type="button"
             >
               <p class="header_title">Автоперевозки</p>
               <img src="../assets/icons/chevron.svg" alt="chevron" />
-            </button>
+            </a>
             <div class="dropdown-menu">
               <a
                 href="./road_transportation.html"
