--- a/pages/cargo_transportation.html
+++ b/pages/cargo_transportation.html
@@ -31,13 +31,14 @@
         </a>
         <div class="flex gap-6 max-[1440px]:hidden">
           <div class="dropdown">
-            <button
+            <a
+              href="./cargo_transportation.html"
               class="flex items-center gap-1 dropdown-trigger"
-              type="button"
             >
               <p class="text-white font-medium text-xl">Грузоперевозки</p>
               <img src="../assets/icons/chevron.svg" alt="chevron" />
-            </button>
+            </a>
+
             <div class="dropdown-menu">
               <a
                 href="./cargo_transportation.html"
@@ -72,13 +73,13 @@
             </div>
           </div>
           <div class="dropdown">
-            <button
+            <a
+              href="./road_transportation.html"
               class="flex items-center gap-1 dropdown-trigger"
-              type="button"
             >
               <p class="header_title">Автоперевозки</p>
               <img src="../assets/icons/chevron.svg" alt="chevron" />
-            </button>
+            </a>
             <div class="dropdown-menu">
               <a
                 href="./road_transportation.html"
@@ -398,7 +399,7 @@
           </button>
         </div>
         <div
-          class="w-[722px] max-[1920px]:max-h-[550px] max-[1440px]:max-h-full overflow-auto bg-white p-8 rounded-3xl max-[1440px]:w-[504px] max-[1024px]:w-[728px] max-[1024px]:p-6 max-[768px]:hidden"
+          class="w-[722px] max-[1920px]:max-h-[430px] max-[1440px]:max-h-full overflow-auto bg-white p-8 rounded-3xl max-[1440px]:w-[504px] max-[1024px]:w-[728px] max-[1024px]:p-6 max-[768px]:hidden"
         >
           <h2
             class="text-[#3A3A3A] font-medium leading-[100%] space3 text-[2rem] mb-6"
