--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
       <div class="swiper-pagination"></div>
 
       <div
-        class="flex justify-between max-[1024px]:flex-col max-[1024px]:gap-10 max-[1024px]:items-center absolute w-full top-0 z-10 px-15 pt-34 max-[1440px]:pt-32.5 max-[768px]:px-4 max-[768px]:pt-30"
+        class="flex min-[1024px]:justify-between items-start h-full max-[1440px]:max-h-[auto] max-[1024px]:flex-col max-[1024px]:gap-10 max-[1024px]:items-center absolute w-full top-0 z-10 px-15 pt-34 max-[1440px]:pt-32.5 max-[768px]:px-4 max-[768px]:pt-30"
       >
         <div class="max-[1024px]:w-full">
           <h1
@@ -394,7 +394,7 @@
           </button>
         </div>
         <div
-          class="w-[722px] max-[1920px]:max-h-[75dvh] max-[1440px]:max-h-full overflow-auto bg-white p-8 rounded-3xl max-[1440px]:w-[504px] max-[1024px]:w-[728px] max-[1024px]:p-6 max-[768px]:hidden"
+          class="w-[722px] max-[1920px]:max-h-[85%] max-[1440px]:max-h-[auto] overflow-auto bg-white p-8 rounded-3xl max-[1440px]:w-[504px] max-[1024px]:w-[728px] max-[1024px]:p-6 max-[768px]:hidden"
         >
           <h2
             class="text-[#3A3A3A] font-medium leading-[100%] space3 text-[2rem] mb-6"
