--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
             />
             <input
               type="text"
-              class="flex-1 h-14 bg-[#F2F5F7] rounded-xl p-4 outline-none text-lg max-[1440px]:text-sm"
+              class="flex-1 h-12 bg-[#F2F5F7] rounded-xl p-4 outline-none text-lg max-[1440px]:text-sm"
               placeholder="Габариты"
             />
           </div>
@@ -756,7 +756,7 @@
             <img
               src="./assets/icons/about_line.svg"
               alt="about"
-              class="about_line"
+              class="about_line max-[1440px]:hidden!"
             />
             <img
               src="./assets/icons/aboutLineTablet.svg"
@@ -850,7 +850,7 @@
           <img
             src="./assets/images/about_company.png"
             alt="about"
-            class="h-185 object-cover w-full max-[1920px]:h-160 max-[1439px]:w-125.5 max-[1439px]:h-110 max-[768px]:w-82 max-[768px]:h-82 max-[768px]:rounded-3xl! max-[768px]:mt-0 max-[1440px]:mt-11 rounded-l-4xl max-[1024px]:mt-17 max-[1024px]:rounded-l-3xl max-[1024px]:h-102.5 max-[1024px]:w-81"
+            class="h-185 object-cover w-full max-[1920px]:h-160 max-[1441px]:w-125.5 max-[1441px]:h-110 max-[768px]:w-82 max-[768px]:h-82 max-[768px]:rounded-3xl! max-[768px]:mt-0 max-[1440px]:mt-11 rounded-l-4xl max-[1024px]:mt-17 max-[1024px]:rounded-l-3xl max-[1024px]:h-102.5 max-[1024px]:w-81"
           />
         </div>
       </section>
