--- a/pages/cargo_transportation.html
+++ b/pages/cargo_transportation.html
@@ -371,7 +371,7 @@
       </div>
       <div class="swiper-pagination"></div>
       <div
-        class="flex min-[1024px]:justify-between items-start h-full max-[1440px]:max-h-[auto] gap-10 max-[1024px]:flex-col max-[1024px]:gap-10 max-[1024px]:items-center absolute w-full top-0 z-10 px-15 pt-34 max-[1440px]:pt-32.5 max-[768px]:px-4 max-[768px]:pt-30"
+        class="flex min-[1024px]:justify-between items-start h-full max-[1440px]:max-h-[auto] gap-10 max-[1024px]:flex-col max-[1024px]:gap-10 max-[1024px]:items-center absolute w-full top-0 z-10 px-15 max-[1440px]:px-10 pt-34 max-[1440px]:pt-32.5 max-[768px]:px-4 max-[768px]:pt-30"
       >
         <div
           class="max-w-[793px] max-[1440px]:max-w-[431px] max-[1024px]:max-w-full"
@@ -410,14 +410,14 @@
             <input
               data-role="from"
               type="text"
-              class="flex-1 address-input h-12 bg-[#F2F5F7] rounded-xl p-4 outline-none text-lg max-[1440px]:text-sm"
+              class="w-full address-input h-12 bg-[#F2F5F7] rounded-xl p-4 outline-none text-lg max-[1440px]:text-sm"
               placeholder="Откуда"
             />
             <img src="../assets/icons/arrowLeftRight.svg" alt="arrow" />
             <input
               data-role="to"
               type="text"
-              class="flex-1 address-input h-12 bg-[#F2F5F7] rounded-xl p-4 outline-none text-lg max-[1440px]:text-sm"
+              class="w-full address-input h-12 bg-[#F2F5F7] rounded-xl p-4 outline-none text-lg max-[1440px]:text-sm"
               placeholder="Куда"
             />
             <div id="suggestions" class="suggestions"></div>
