--- a/index.html
+++ b/index.html
@@ -883,7 +883,12 @@
             <img
               src="./assets/images/service1.png"
               alt="service1"
-              class="service-card-image absolute bottom-0 right-0 w-120 h-100 max-[768px]:w-47 max-[768px]:h-47 max-[1440px]:w-70 max-[1440px]:h-60 max-[1440px]:-right-15 max-[1024px]:-right-5 max-[1024px]:h-65"
+              class="service-card-image absolute bottom-0 right-0 w-120 h-100 max-[768px]:hidden max-[1440px]:w-70 max-[1440px]:h-60 max-[1440px]:-right-15 max-[1024px]:-right-5 max-[1024px]:h-65"
+            />
+            <img
+              src="./assets/images/service1mobile.png"
+              alt="service1"
+              class="service-card-image hidden max-[768px]:block absolute bottom-0 right-0"
             />
           </a>
 
@@ -904,7 +909,12 @@
             <img
               src="./assets/images/service2.png"
               alt="service1"
-              class="service-card-image absolute bottom-0 right-0 w-120 h-100 max-[768px]:w-47 max-[768px]:h-47 max-[768px]:right-0 max-[1440px]:w-70 max-[1440px]:h-60 max-[1024px]:right-8"
+              class="service-card-image absolute bottom-0 right-0 w-120 h-100 max-[768px]:hidden max-[768px]:right-0 max-[1440px]:w-70 max-[1440px]:h-60 max-[1024px]:right-8"
+            />
+            <img
+              src="./assets/images/service2mobile.png"
+              alt="service1"
+              class="service-card-image absolute bottom-0 right-0 hidden max-[768px]:block"
             />
           </a>
 
@@ -925,7 +935,12 @@
             <img
               src="./assets/images/service3.png"
               alt="service1"
-              class="service-card-image absolute bottom-0 right-3 w-120 h-100 max-[1440px]:w-70 max-[768px]:w-45 max-[768px]:h-45 max-[768px]:right-0 max-[1440px]:h-60 max-[1024px]:right-11 max-[1024px]:bottom-2 max-[1024px]:w-60 max-[1024px]:h-50"
+              class="service-card-image absolute bottom-0 right-3 w-120 h-100 max-[1440px]:w-70 max-[768px]:hidden max-[768px]:right-0 max-[1440px]:h-60 max-[1024px]:right-11 max-[1024px]:bottom-2 max-[1024px]:w-60 max-[1024px]:h-50"
+            />
+            <img
+              src="./assets/images/service3mobile.png"
+              alt="service1"
+              class="service-card-image absolute bottom-0 right-4 hidden max-[768px]:block"
             />
           </a>
 
