--- a/pages/blog.html
+++ b/pages/blog.html
@@ -98,7 +98,12 @@
           <a href="./pricelist.html" class="header_title">Прайс-лист</a>
         </div>
       </div>
-      <div class="gap-2 flex">
+      <div class="gap-2 flex items-center">
+        <a
+          class="header_title mr-6 max-[1024px]:text-sm! max-[768px]:hidden max-[1024px]:mr-0"
+          href="tel:+7(383)230-56-76"
+          >+7(383)230-56-76</a
+        >
         <div class="header_icon_wrap max-[768px]:hidden!">
           <img src="../assets/icons/phone.svg" alt="phone" />
         </div>
@@ -196,6 +201,11 @@
                 <img src="../assets/icons/phone.svg" alt="phone" />
               </div>
             </div>
+            <a
+              class="header_title text-lg! hidden max-[768px]:block mt-2"
+              href="tel:+7(383)230-56-76"
+              >+7(383)230-56-76</a
+            >
           </div>
           <div class="menu-screen menu-sub" data-menu="cargo">
             <button class="menu-back">
