--- a/index.html
+++ b/index.html
@@ -748,11 +748,11 @@
       >
         <div class="flex-1">
           <div
-            class="flex items-center justify-between max-[1440px]:items-start"
+            class="flex items-start justify-between max-[1440px]:items-start"
           >
             <div>
               <h2
-                class="title max-[1440px]:mt-20 max-[768px]:mt-16 max-[768px]:mb-4"
+                class="title max-[1440px]:mt-20 mt-[94px] max-[768px]:mt-16 max-[768px]:mb-4"
               >
                 О компании
               </h2>
@@ -833,7 +833,9 @@
           </div>
         </div>
 
-        <div class="relative flex-1 pt-40 max-[1440px]:pt-20 max-[768px]:pt-3">
+        <div
+          class="relative flex-1 pt-[94px] max-[1440px]:pt-20 max-[768px]:pt-3"
+        >
           <p class="font-medium text-2xl mb-6 space3 max-[1440px]:hidden">
             Логистика для бизнеса
             <span class="text-[#C83A36] leading-8"
