--- a/index.html
+++ b/index.html
@@ -1005,10 +1005,15 @@
             <img
               src="./assets/images/service5.png"
               alt="service1"
-              class="service-card-image absolute radius_right radius_servie5 bottom-0 right-0 w-195 h-130 object-cover max-[1440px]:w-90 max-[1440px]:h-70 max-[1024px]:hidden"
+              class="service-card-image absolute bottom-0 right-0 w-195 h-130 object-cover max-[1440px]:hidden max-[1440px]:h-90 max-[1024px]:hidden"
             />
             <img
               src="./assets/images/service5Tablet.png"
+              alt="service1"
+              class="service-card-image absolute bottom-0 right-0 hidden max-[1440px]:block object-cover max-[1024px]:hidden"
+            />
+            <img
+              src="./assets/images/service5Tablet2.png"
               alt="service1"
               class="service-card-image absolute bottom-0 min-[768px]:left-11 object-cover hidden max-[1024px]:block max-[768px]:w-75 max-[768px]:h-52 max-[768px]:-right-7!"
             />
