--- a/index.html
+++ b/index.html
@@ -875,7 +875,7 @@
         <div class="flex flex-wrap gap-3">
           <a
             href="/pages/road_transportation.html#europ"
-            class="service-card flex-1 basis-[calc(33.333%-0.5rem)] max-[1024px]:basis-[calc(50%-0.375rem)] min-w-[300px] p-8 bg-white h-125 max-[1440px]:h-80 max-[768px]:h-60 radius_left relative overflow-hidden flex justify-between"
+            class="service-card flex-1 basis-[calc(33.333%-0.5rem)] max-[1024px]:basis-[calc(50%-0.375rem)] min-w-[300px] p-8 max-[768px]:p-6 bg-white h-125 max-[1440px]:h-80 max-[768px]:h-60 radius_left relative overflow-hidden flex justify-between"
           >
             <p
               class="text-[2rem] text-[#3A3A3A] font-medium max-[1440px]:text-2xl max-[1440px]:leading-7 max-[768px]:hidden"
@@ -884,14 +884,14 @@
               еврофурами
             </p>
             <p
-              class="text-lg text-[#3A3A3A] font-medium hidden max-[768px]:block"
+              class="text-xl text-[#3A3A3A] font-medium hidden max-[768px]:block"
             >
               Перевозка еврофурами
             </p>
             <img
               src="./assets/icons/arrowUp.svg"
               alt="arrow"
-              class="w-8 h-8 service-card-arrow"
+              class="w-8 h-8 service-card-arrow max-[768px]:w-6 max-[768px]:h-6"
             />
             <img
               src="./assets/images/service1.png"
@@ -907,17 +907,17 @@
 
           <a
             href="/pages/road_transportation.html#city"
-            class="service-card flex-1 basis-[calc(33.333%-0.5rem)] max-[1024px]:basis-[calc(50%-0.375rem)] min-w-[300px] p-8 bg-white h-125 max-[768px]:h-60 max-[1440px]:h-80 overflow-hidden radius_full radius_servie2 relative flex justify-between"
+            class="service-card flex-1 basis-[calc(33.333%-0.5rem)] max-[1024px]:basis-[calc(50%-0.375rem)] min-w-[300px] p-8 max-[768px]:p-10 bg-white h-125 max-[768px]:h-60 max-[1440px]:h-80 overflow-hidden radius_full radius_servie2 relative flex justify-between"
           >
             <p
-              class="text-[2rem] text-[#3A3A3A] font-medium max-[1440px]:text-2xl max-[1440px]:leading-7 max-[768px]:text-lg max-[768px]:leading-6"
+              class="text-[2rem] text-[#3A3A3A] font-medium max-[1440px]:text-2xl max-[1440px]:leading-7 max-[768px]:text-xl space-3 max-[768px]:leading-6"
             >
               Городские / пригородные перевозки
             </p>
             <img
               src="./assets/icons/arrowUp.svg"
               alt="arrow"
-              class="w-8 h-8 service-card-arrow"
+              class="w-8 h-8 service-card-arrow max-[768px]:w-6 max-[768px]:h-6"
             />
             <img
               src="./assets/images/service2.png"
@@ -933,17 +933,17 @@
 
           <a
             href="/pages/cargo_transportation.html#rc"
-            class="service-card flex-1 basis-[calc(33.333%-0.5rem)] max-[1024px]:basis-[calc(50%-0.375rem)] min-w-[300px] p-8 bg-white radius_right max-[768px]:h-60 radius_servie3 h-125 max-[1440px]:h-80 overflow-hidden relative flex justify-between"
+            class="service-card flex-1 basis-[calc(33.333%-0.5rem)] max-[1024px]:basis-[calc(50%-0.375rem)] min-w-[300px] p-8 max-[768px]:p-6 bg-white radius_right max-[768px]:h-60 radius_servie3 h-125 max-[1440px]:h-80 overflow-hidden relative flex justify-between"
           >
             <p
-              class="text-[2rem] text-[#3A3A3A] font-medium max-[1440px]:text-2xl max-[1440px]:leading-7 max-[768px]:text-lg max-[768px]:leading-6"
+              class="text-[2rem] text-[#3A3A3A] font-medium max-[1440px]:text-2xl max-[1440px]:leading-7 max-[768px]:text-xl max-[768px]:leading-6"
             >
               Доставка выделенным транспортом в РЦ
             </p>
             <img
               src="./assets/icons/arrowUp.svg"
               alt="arrow"
-              class="w-8 h-8 service-card-arrow"
+              class="w-8 h-8 service-card-arrow max-[768px]:w-6 max-[768px]:h-6"
             />
             <img
               src="./assets/images/service3.png"
@@ -958,23 +958,23 @@
             <img
               src="./assets/images/service3mobile.png"
               alt="service1"
-              class="service-card-image absolute bottom-0 right-4 hidden max-[768px]:block"
+              class="service-card-image absolute bottom-0 right-0 hidden max-[768px]:block"
             />
           </a>
 
           <a
             href="/pages/cargo_transportation.html#ltl"
-            class="service-card flex-1 basis-[calc(50%-0.375rem)] max-[1024px]:basis-[calc(50%-0.375rem)] min-w-[300px] p-8 bg-white radius_left max-[768px]:h-60 radius_servie2 overflow-hidden h-125 max-[1440px]:h-80 relative flex justify-between"
+            class="service-card flex-1 basis-[calc(50%-0.375rem)] max-[1024px]:basis-[calc(50%-0.375rem)] min-w-[300px] p-8 max-[768px]:p-6 bg-white radius_left max-[768px]:h-60 radius_servie2 overflow-hidden h-125 max-[1440px]:h-80 relative flex justify-between"
           >
             <p
-              class="text-[2rem] text-[#3A3A3A] font-medium max-[1440px]:text-2xl max-[1440px]:leading-7 max-[768px]:text-lg max-[768px]:leading-6"
+              class="text-[2rem] text-[#3A3A3A] font-medium max-[1440px]:text-2xl max-[1440px]:leading-7 max-[768px]:text-xl max-[768px]:leading-6"
             >
               Доставка малотоннажным транспортом
             </p>
             <img
               src="./assets/icons/arrowUp.svg"
               alt="arrow"
-              class="w-8 h-8 service-card-arrow"
+              class="w-8 h-8 service-card-arrow max-[768px]:w-6 max-[768px]:h-6"
             />
             <img
               src="./assets/images/service4.png"
@@ -990,17 +990,17 @@
 
           <a
             href="/pages/road_transportation.html#partial"
-            class="service-card flex-1 basis-[calc(50%-0.375rem)] overflow-hidden max-[1024px]:basis-full min-w-[300px] p-8 bg-white h-125 max-[768px]:h-60 max-[1440px]:h-80 radius_right radius_servie5 relative flex justify-between"
+            class="service-card flex-1 basis-[calc(50%-0.375rem)] overflow-hidden max-[1024px]:basis-full min-w-[300px] p-8 max-[768px]:p-6 bg-white h-125 max-[768px]:h-60 max-[1440px]:h-80 radius_right radius_servie5 relative flex justify-between"
           >
             <p
-              class="text-[2rem] text-[#3A3A3A] font-medium max-[1440px]:text-2xl max-[1440px]:leading-7 max-[768px]:text-lg max-[768px]:leading-6"
+              class="text-[2rem] text-[#3A3A3A] font-medium max-[1440px]:text-2xl max-[1440px]:leading-7 max-[768px]:text-xl max-[768px]:leading-6"
             >
               Перевозка догрузом
             </p>
             <img
-              src="./assets/icons/arrowUp.svg"
+              src="./assets/icons/arrowUp.svg "
               alt="arrow"
-              class="w-8 h-8 service-card-arrow"
+              class="w-8 h-8 service-card-arrow max-[768px]:w-6 max-[768px]:h-6"
             />
             <img
               src="./assets/images/service5.png"
@@ -1015,7 +1015,12 @@
             <img
               src="./assets/images/service5Tablet2.png"
               alt="service1"
-              class="service-card-image absolute bottom-0 min-[768px]:left-11 object-cover hidden max-[1024px]:block max-[768px]:w-75 max-[768px]:h-52 max-[768px]:-right-7!"
+              class="service-card-image absolute bottom-0 max-[768px]:hidden object-cover hidden max-[1024px]:block max-[768px]:w-75 max-[768px]:h-52 max-[768px]:-right-7!"
+            />
+            <img
+              src="./assets/images/service5mobile.png"
+              alt="service1"
+              class="service-card-image absolute object-cover bottom-0 right-0 max-[768px]:block hidden"
             />
           </a>
         </div>
